# yuzu-sdl-config

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: AddGladeHeaderTarget.cmake  GenerateHeaderFromGlade.cmake  GenerateHeaderFromGlade.cmake.in
src/: CMakeLists.txt
src/hid/: CMakeLists.txt  device.cpp  device.h  hid.cpp  hid.h
src/yuzu_sdl_config/: CMakeLists.txt  config.cpp  config.h  general.cpp  general.glade  general.glade.h.in  general.h  main.cpp  main_window.cpp  main_window.glade  main_window.glade.h.in  main_window.h  tab.h  tab_debug.cpp  tab_debug.glade  tab_debug.h  tab_general.cpp  tab_general.glade  tab_general.glade.h.in  tab_general.h
src/yuzu_sdl_config/tab/: audio.cpp  audio.glade  audio.h  controls_player.cpp  controls_player.glade  controls_player.h  cpu.cpp  cpu.glade  cpu.h  debug.cpp  debug.glade  debug.glade.h.in  debug.h  debug_cpu.cpp  debug_cpu.glade  debug_cpu.h  filesystem.cpp  filesystem.glade  filesystem.h  general.cpp  general.glade  general.h  glade.h.in  graphics.cpp  graphics.glade  graphics.h  graphics_advanced.cpp  graphics_advanced.glade  graphics_advanced.h  network.cpp  network.glade  network.h  system.cpp  system.glade  system.glade.h.in  system.h  tab.h  web_service.cpp  web_service.glade  web_service.glade.h.in  (+1 more)
